# SimpleChattyBotCpp

./: CMakeLists.txt
IntegerTypesAndOperations/ArithmeticExpression/: ArithmeticExpression.cpp  CMakeLists.txt
IntegerTypesAndOperations/ArithmeticExpression/ArithmeticExpressionOutput/: Makefile  cmake_install.cmake
IntegerTypesAndOperations/Desks/: CMakeLists.txt  Desks.cpp
IntegerTypesAndOperations/Desks/DesksOutput/: Makefile  cmake_install.cmake
IntegerTypesAndOperations/DifferenceOfTimes/: CMakeLists.txt  DifferenceOfTimes.cpp
IntegerTypesAndOperations/DifferenceOfTimes/DifferenceOfTimesOutput/: Makefile  cmake_install.cmake
IntegerTypesAndOperations/GoodRestOnVacations/: CMakeLists.txt  GoodRestOnVacations.cpp
IntegerTypesAndOperations/GoodRestOnVacations/GoodRestOnVacationsOutput/: Makefile  cmake_install.cmake
IntegerTypesAndOperations/HowManyNutsEachSquirrelWillGet/: CMakeLists.txt  HowManyNutsEachSquirrelWillGet.cpp
IntegerTypesAndOperations/HowManyNutsEachSquirrelWillGet/HowManyNutsEachSquirrelWillGetOutput/: Makefile  cmake_install.cmake
IntegerTypesAndOperations/ReadingIntegerNumbers/: CMakeLists.txt  ReadingIntegerNumbers.cpp
IntegerTypesAndOperations/ReadingIntegerNumbers/ReadingIntegerNumbersOutput/: Makefile  cmake_install.cmake
IntegerTypesAndOperations/Reversing/: CMakeLists.txt  Reversing.cpp
IntegerTypesAndOperations/Reversing/ReversingOutput/: Makefile  cmake_install.cmake
IntegerTypesAndOperations/Snail/: CMakeLists.txt  Snail.cpp
IntegerTypesAndOperations/Snail/SnailOutput/: Makefile  cmake_install.cmake
